@@ -8,13 +8,13 @@ AUX pth-2.0.7-ia64.patch 1207 RMD160 b11c9dfc35ad597ef43795681cfb0c796f684ba9 SH
 AUX pth-2.0.7-mint.patch 4645 RMD160 2c9e2646207eb4f81ff931d4a9e4f09cd6ca7f38 SHA1 af5635ad74405a44eed4103dbc4bf79ef1690212 SHA256 ebf16074a067d8befb7fed43bcdbb5ef58463a1ac798c2664e205d3546f79d02
 AUX pth-2.0.7-parallel-install.patch 428 RMD160 93790b86e507e82901af2e6ea21565de39c5bfc6 SHA1 689a18acdf589554f7ae92e37c0d332f6ed66717 SHA256 92e5d8ada700573e0a68e2c30e418ae95b7dcc5a7429a963d3c9ea207205c0c3
 DIST pth-2.0.7.tar.gz 652640 RMD160 80bc66777ba20d9648b7aaf3f58d593be6416910 SHA1 9a71915c89ff2414de69fe104ae1016d513afeee SHA256 72353660c5a2caafd601b20e12e75d865fd88f6cf1a088b306a3963f0bc77232
-EBUILD pth-2.0.7-r3.ebuild 1707 RMD160 a24d3ac0ed6fff784ed762d7d3a609315c20b292 SHA1 0187cb7a56129e1882ad9f399c995469293003f1 SHA256 0cf201b36ddd8cf841348a5110d53765b77c2ea7a8ef56fa462daa7976504a9a
-MISC ChangeLog 9019 RMD160 e5b5e0da3d3dbf48aa40abb17538e078c6297a42 SHA1 c18b4bc7077ddf7103bebabcf513e7109aacf608 SHA256 068cd2e43121e56397b9c43ebc88e19a038ff851503ff84944262629b5744fe2
+EBUILD pth-2.0.7-r3.ebuild 1637 RMD160 e1ae2bdace4de1277f73170eeb9f985aeb38a2ef SHA1 cd8fa1b2574672c34f1557233133917a7ba6824b SHA256 1a1f513247eeeb04af6f7cdaeb5820a7a54ad245d765409bfaf38a7fc58bb9f5
+MISC ChangeLog 9239 RMD160 2918ab24a2cdeb09c5f74baa11196da6df949c34 SHA1 a0bf34fef2c6d2749bf123f4221dc60337fbb7a1 SHA256 866ae915b5c38e804a0af280b2b5934c5787ce73f8342be2224d14f02d171ad5
 MISC metadata.xml 224 RMD160 74db96ad8aa1d285d83ae93a9f4a767335f55c15 SHA1 d86a171d981b45e7ed0c0b3b5059d2a63c811001 SHA256 9e9ce661a9fdb45a535ad875a247b700a70745359b27533ec29a6a46fa708e86
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk5ftbAACgkQX3X2B8XHTok7gACcDDA01Iy2wc+RmdUl/wssA2IR
-WvoAnij053b7Q7CZh5ufdLVhEL36zAsi
-=kCN+
+iEYEARECAAYFAk+3Wu4ACgkQX3X2B8XHTomazgCfVLlV30vh+uphBpnC3b/Hv7Lw
+zx0AnR2BJcXLmhBSUP+77bNPCZFfYk1g
+=3u0o
 -----END PGP SIGNATURE-----
