@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/pth
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/pth/ChangeLog,v 1.69 2011/06/23 14:44:10 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/pth/ChangeLog,v 1.71 2012/05/09 15:21:08 aballier Exp $
+
+  09 May 2012; Alexis Ballier <aballier@gentoo.org> pth-2.0.7-r3.ebuild:
+  keyword ~amd64-fbsd
+
+  11 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org> pth-2.0.7-r3.ebuild:
+  Bump to eapi4 and make static libs optional.
 
   23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -pth-2.0.7-r2.ebuild:
   Remove old ebuilds. Requested by Arfrever
